[tool.poetry]
name = "ojama-jaune"
version = "0.1.0"
description = ""
authors = ["appez <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.10"
python-decouple = "^3.6"
ffmpeg = "^1.4"
Flask = "^2.1.2"
PyNaCl="^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
